# quick-paste

./: .env.example  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
src/: __init__.py  main.py
